openshift/base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: a2a-morning-routine
    component: keycloak
spec:
  type: ClusterIP
  selector:
    app: a2a-morning-routine
    component: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
